deployments/templates/service.yml
apiVersion: v1
kind: Service
metadata:
  name: hmpps-design-system-frontend-service
spec:
  selector:
    app: hmpps-design-system-frontend # this should match the pod label in deployment.yml
  ports:
    - name: https
      port: 8080
      targetPort: 8080
