deployments/templates/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hmpps-court-cases-release-dates-design-ingress
  annotations:
    external-dns.alpha.kubernetes.io/set-identifier: hmpps-court-cases-release-dates-design-ingress-${NAMESPACE}-green
    external-dns.alpha.kubernetes.io/aws-weight: "100"
spec:
  ingressClassName: default
  tls:
    - hosts:
        - court-cases-release-dates-design.hmpps.service.justice.gov.uk
      secretName: hmpps-court-cases-release-dates-design-cert
  rules:
    - host: court-cases-release-dates-design.hmpps.service.justice.gov.uk
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: hmpps-court-cases-release-dates-design-service # this should match the metadata.name in service.yml
                port:
                  number: 8080
